# wireless-validation-pytest

./: .gitignore  Makefile  README.md  SETUP.md  pytest.ini  test_log_parser.py
docs/: sample_exec_summary.md  sample_triage_report.md
fixtures/failing_runs/: core_reject.txt  coverage_hole.txt  healthy_baseline.txt
runs/2026-07-14T15-08-44/: run_record.json
runs/latest/: exec_summary.md  run_record.json  triage_report.md
src/wireless_validation/: kpis.py
src/wireless_validation/triage/: cli.py  llm.py  prompts.py
tests/: test_heuristics.py  test_report.py
wireless-validation-pytest/: .gitignore  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  sample_log.txt
wireless-validation-pytest/fixtures/failing_runs/: missing_neighbor.txt  param_config.txt
wireless-validation-pytest/src/wireless_validation/: __init__.py  parser.py
wireless-validation-pytest/src/wireless_validation/triage/: __init__.py  heuristics.py  models.py  report.py
wireless-validation-pytest/tests/: test_field_validation.py  test_parser.py
