[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wireless-validation-pytest"
version = "1.0.0"
description = "pytest framework for 5G NR KPI validation with AI-assisted failure triage"
requires-python = ">=3.8"
dependencies = ["pytest>=7.4.0", "pytest-html>=4.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
